--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     clickhouse:
-        container_name: 'clickhouse'
+        container_name: 'clickhouse_integration_test'
         image: yandex/clickhouse-server:latest
         environment:
             CLICKHOUSE_PASSWORD: 20ilona01
