--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     clickhouse:
         image: yandex/clickhouse-server:latest
         environment:
-            CLICKHOUSE_PASSWORD: 20ilona01
+            CLICKHOUSE_PASSWORD: 12345
         ports:
             - "8125:8123"
             - "9001:9000"
